--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,8 @@
 @import "./utils/variables";
 @import "./utils/mixins";
+@import "./utils/keyframes";
+
+@import "./base/body";
 
 @import "./layout/header";
+@import "./layout/section";
