--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -1,3 +1,4 @@
+/*Start Section 1*/
 .location {
   @include flexcenter;
   padding: 10px;
@@ -11,7 +12,6 @@
     width: 40%;
     max-width: 300px;
     font-size: min(4vw, 23px);
-
     font-weight: 700;
   }
   &__icone {
@@ -50,9 +50,11 @@
 .bookingButton {
   @include flexcenter;
   background-color: $colorGrey;
-  padding-bottom: 60px;
+  padding-bottom: 50px;
+  padding-top: 10px;
 
   &__animation {
+    box-shadow: 2px 13px 28px -6px $colorGreyIcone;
     width: 50%;
     max-width: 280px;
     font-size: min(3.4vw, 19px);
@@ -61,18 +63,101 @@
     padding-bottom: min(3.1vw, 18px);
     border-radius: 35px;
     border: none;
-    background: linear-gradient(172deg, $colorSecondaire, $colorPrimaire);
+    background: linear-gradient(
+      172deg,
+      $colorSecondaireGradient,
+      $colorPrimaireGradient
+    );
     cursor: pointer;
     &:hover {
       background: linear-gradient(
         172deg,
-        $colorSecondaireLight,
-        $colorPrimaireLight
+        $colorSecondaireGradientLight,
+        $colorPrimaireGradientLight
       );
       animation: color-change-11x 2s ease-in-out infinite;
       transform: scale(1.1);
       transition: 1s;
       box-shadow: -6px -4px 32px 0px #ffaee9, 6px 4px 32px 0px #bb97e8;
     }
+    &:active {
+      transform: scale(0.9);
+      transition: 0.1s;
+      box-shadow: 2px 13px 28px -6px $colorGreyIcone;
+    }
   }
 }
+/*End Section 1*/
+
+/*Start Section 2*/
+.function {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 20px;
+  &__title {
+    font-size: min(4.5vw, 25px);
+    font-weight: 700;
+    @include tabletteAndDesktop-screen {
+      text-align: center;
+    }
+  }
+  &__box {
+    @include flexcenter;
+    margin-left: 3%;
+    flex-wrap: wrap;
+    width: 100%;
+    @include tabletteAndDesktop-screen {
+      margin-left: auto;
+    }
+  }
+  &__buttons {
+    @include flexitemscenter;
+    cursor: pointer;
+    background-color: $colorGrey;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    padding: 20px;
+    border-radius: 15px;
+    width: 100%;
+    max-width: 300px;
+    min-height: 20px;
+    height: auto;
+    box-shadow: 4px 5px 8px 4px $colorGreyDark;
+    @include tabletteAndDesktop-screen {
+      margin-right: 1.5vw;
+      margin-left: 1.5vw;
+    }
+    &:hover {
+      background-color: $colorPrimaireLight;
+      transform: scale(1.01) translate(-10px, -4px);
+      & .function__buttons--icone {
+        color: $colorPrimaire;
+      }
+    }
+    &:active {
+      box-shadow: 4px 1px 11px 4px $colorGreyDark inset;
+      transform: translate(0px, 0px);
+    }
+    &--number {
+      position: relative;
+      background-color: $colorPrimaire;
+      border-radius: 50%;
+      padding: 4px 8px 4px 8px;
+      color: white;
+      margin-left: -32px;
+    }
+    &--icone {
+      color: $colorGreyIcone;
+      margin-right: 15px;
+      margin-left: min(15px);
+      font-size: min(4vw, 23px);
+    }
+    &--title {
+      font-size: min(4vw, 23px);
+      font-weight: 700;
+    }
+  }
+}
+/*End Section 2*/
