--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,8 +7,13 @@ $breakpoints: (
 
 $colorGrey: #f6f6f6;
 $colorGreyDark: darken($colorGrey, 6%);
+$colorGreyIcone: darken($colorGrey, 50%);
 
-$colorPrimaire: rgba(147, 86, 220, 1) 71%;
-$colorPrimaireLight: rgba(159, 107, 222, 1) 71%;
-$colorSecondaire: rgba(255, 121, 218, 1) 12%;
-$colorSecondaireLight: rgba(255, 140, 223, 1) 12%;
+$colorPrimaire: #9356dc;
+$colorSecondaire: #ff79da;
+$colorPrimaireLight: lighten($colorPrimaire, 37%);
+
+$colorPrimaireGradient: rgba(147, 86, 220, 1) 71%;
+$colorPrimaireGradientLight: rgba(159, 107, 222, 1) 71%;
+$colorSecondaireGradient: rgba(255, 121, 218, 1) 12%;
+$colorSecondaireGradientLight: rgba(255, 140, 223, 1) 12%;
