--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,8 @@
 
 @import "./base/body";
 
+@import "./layout/loader";
 @import "./layout/header";
 @import "./layout/article";
 @import "./layout/section";
+@import "./layout/footer";
