--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -10,3 +10,36 @@
     opacity: 0;
   }
 }
+
+@keyframes loaderFlash {
+  0% {
+    text-shadow: 0px 0px 7px #ffafe9;
+    transform: scale(1.1) translate(-10px, -4px);
+    transition: transform 0.2s translate 0.2s;
+  }
+
+  50% {
+    color: black;
+    text-shadow: none;
+    transform: scale(0.9) translate(0px, 0px);
+    transition: transform 0.1s translate 0.1s;
+  }
+  100% {
+    text-shadow: 0px 0px 7px #ffafe9;
+    transform: scale(1.1) translate(-10px, -4px);
+    transition: transform 0.2s translate 0.2s;
+  }
+}
+@keyframes loader {
+  0% {
+    visibility: visible;
+    opacity: 0.8;
+  }
+  70% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
