--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,6 @@
 $breakpoints: (
+  mobile-check: 368px,
+  footer-tablette: 457px,
   mobile: 719px,
   min-tablette: 720px,
   max-tablette: 1024px,
