--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,60 @@
     visibility: hidden;
   }
 }
+@keyframes slide-left {
+  0% {
+    margin-right: -55px;
+  }
+  100% {
+    margin-right: 0px;
+  }
+}
+@keyframes slide-left-10 {
+  0% {
+    margin-right: -65px;
+  }
+  100% {
+    margin-right: 0px;
+  }
+}
+@keyframes slide-left-20 {
+  0% {
+    margin-right: -75px;
+  }
+  100% {
+    margin-right: 0px;
+  }
+}
+@keyframes slide-left-25 {
+  0% {
+    margin-right: -80px;
+  }
+  100% {
+    margin-right: 0px;
+  }
+}
+@keyframes rotate-center {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes slide-in-blurred-bottom {
+  0% {
+    transform: translateY(500px) scaleY(2.5) scaleX(0.2);
+    transform-origin: 50% 100%;
+    filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+    filter: blur(0);
+    opacity: 1;
+  }
+}
 body,
 html {
   margin: 0;
@@ -46,6 +100,24 @@ html {
 a {
   text-decoration: none;
   display: contents;
+}
+
+.bgImage {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+}
+.bgImage__img {
+  width: 100%;
+  object-fit: cover;
+  max-height: 500px;
+  z-index: -1;
+}
+
+.mainFlex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .loader {
@@ -110,6 +182,15 @@ a {
   width: 50%;
   max-width: 350px;
 }
+.header__previous {
+  position: absolute;
+  top: min(4vw, 25px);
+  left: min(5vw, 40px);
+}
+.header__previous--icone {
+  font-size: min(4vw, 30px);
+  color: black;
+}
 
 .restaurants {
   display: flex;
@@ -128,6 +209,65 @@ a {
   .restaurants__title {
     text-align: center;
   }
+}
+
+.checkbox {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: -40px;
+  padding-top: 10px;
+  background-color: #f6f6f6;
+  border-radius: 40px 40px 0px 0px;
+  max-width: 950px;
+}
+@media all and (min-width: 720px) {
+  .checkbox:hover {
+    transform: scale(1.01) translate(-10px, -4px);
+    box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 40px 40px 40px 40px;
+  }
+}
+.checkbox__header {
+  display: flex;
+  justify-content: center;
+}
+.checkbox__header__title {
+  font-family: "Shrikhand", sans-serif;
+  margin-right: 32px;
+  font-size: min(4.5vw, 30px);
+}
+.checkbox__header__heart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 6vw;
+  max-width: 30px;
+}
+.checkbox__header__heart .heart-full {
+  position: absolute;
+  fill: url(#text-fill);
+  stroke: none;
+}
+.checkbox__header__heart .heart {
+  width: 6vw;
+  max-width: 30px;
+  stroke-width: 30;
+  cursor: pointer;
+}
+.checkbox__header__heart .heart-empty {
+  width: 50px;
+  position: relative;
+  fill: #f6f6f6;
+  stroke: black;
+}
+.checkbox__header__heart .heart-empty:hover {
+  opacity: 0;
+  transition: 1s;
 }
 
 /*Start Section 1*/
@@ -422,6 +562,301 @@ a {
 }
 
 /*End Section 3*/
+/*START LA PALETTE DU GOUT*/
+.checkbox__section {
+  display: flex;
+  justify-content: center;
+  padding-right: 10px;
+  padding-left: 10px;
+  flex-wrap: wrap;
+}
+.checkbox__section__box {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+}
+@media all and (min-width: 720px) {
+  .checkbox__section__box {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+}
+.checkbox__section__box__title {
+  display: flex;
+  flex-direction: column;
+}
+.checkbox__section__box__title h2 {
+  font-weight: 400;
+  font-size: min(4.2vw, 18px);
+}
+.checkbox__section__box__title h2::after {
+  display: block;
+  content: "";
+  margin-top: 4px;
+  width: 8vw;
+  max-width: 35px;
+  background-color: #99e2d0;
+  border: solid 1px #99e2d0;
+  height: 1px;
+}
+.checkbox__section__box__check__button4 {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  overflow: hidden;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 4px 5px 8px 4px #aaaaaa;
+  cursor: pointer;
+  width: 95vw;
+  max-width: 370px;
+  animation: slide-in-blurred-bottom 2s cubic-bezier(0.23, 1, 0.32, 1) 3.6s both;
+}
+.checkbox__section__box__check__button4__title {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: auto;
+}
+.checkbox__section__box__check__button4__title h3 {
+  font-size: min(4.5vw, 18px);
+  margin-bottom: 2px;
+  margin-top: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.checkbox__section__box__check__button4__title p {
+  font-weight: 400;
+  font-size: min(4vw, 16px);
+  margin-top: 0;
+  margin-bottom: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.checkbox__section__box__check__button4__price {
+  display: flex;
+  margin-right: -55px;
+}
+@media all and (min-width: 368px) {
+  .checkbox__section__box__check__button4__price {
+    margin-right: -65px;
+  }
+}
+@media all and (min-width: 473px) {
+  .checkbox__section__box__check__button4__price {
+    margin-right: -75px;
+  }
+}
+@media all and (min-width: 473px) {
+  .checkbox__section__box__check__button4__price {
+    margin-right: -80px;
+  }
+}
+.checkbox__section__box__check__button4__price--txt {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-color: white;
+  padding-bottom: 10px;
+  padding-right: 20px;
+}
+.checkbox__section__box__check__button4__price--txt p {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: min(4vw, 16px);
+  font-weight: 700;
+}
+.checkbox__section__box__check__button4--animation {
+  background-color: #99e2d0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 15px 15px 0;
+  padding-left: min(5vw, 30px);
+  padding-right: min(5vw, 30px);
+  width: 100%;
+}
+.checkbox__section__box__check__button4--animation .animIcon {
+  color: #99e2d0;
+  padding: 4px;
+  font-size: 10px;
+  border-radius: 50px;
+  background-color: white;
+}
+.checkbox__section__box__check__button4:hover .checkbox__section__box__check__button4__price {
+  animation: slide-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+@media all and (min-width: 368px) {
+  .checkbox__section__box__check__button4:hover .checkbox__section__box__check__button4__price {
+    animation: slide-left-10 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
+}
+@media all and (min-width: 473px) {
+  .checkbox__section__box__check__button4:hover .checkbox__section__box__check__button4__price {
+    animation: slide-left-20 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
+}
+@media all and (min-width: 473px) {
+  .checkbox__section__box__check__button4:hover .checkbox__section__box__check__button4__price {
+    animation: slide-left-25 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
+}
+.checkbox__section__box__check__button4:hover .checkbox__section__box__check__button4--animation .animIcon {
+  animation: rotate-center 1s ease-in-out reverse both;
+}
+.checkbox__section__box__check__button {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  overflow: hidden;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 4px 5px 8px 4px #aaaaaa;
+  cursor: pointer;
+  width: 95vw;
+  max-width: 370px;
+}
+.checkbox__section__box__check__button:nth-child(1) {
+  animation: slide-in-blurred-bottom 2s cubic-bezier(0.23, 1, 0.32, 1) 2s both;
+}
+.checkbox__section__box__check__button:nth-child(2) {
+  animation: slide-in-blurred-bottom 2s cubic-bezier(0.23, 1, 0.32, 1) 2.5s both;
+}
+.checkbox__section__box__check__button:nth-child(3) {
+  animation: slide-in-blurred-bottom 2s cubic-bezier(0.23, 1, 0.32, 1) 3s both;
+}
+.checkbox__section__box__check__button__title {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: auto;
+}
+.checkbox__section__box__check__button__title h3 {
+  font-size: min(4.5vw, 18px);
+  margin-bottom: 2px;
+  margin-top: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.checkbox__section__box__check__button__title p {
+  font-weight: 400;
+  font-size: min(4vw, 16px);
+  margin-top: 0;
+  margin-bottom: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.checkbox__section__box__check__button__price {
+  display: flex;
+  margin-right: -55px;
+}
+@media all and (min-width: 368px) {
+  .checkbox__section__box__check__button__price {
+    margin-right: -65px;
+  }
+}
+@media all and (min-width: 473px) {
+  .checkbox__section__box__check__button__price {
+    margin-right: -75px;
+  }
+}
+@media all and (min-width: 473px) {
+  .checkbox__section__box__check__button__price {
+    margin-right: -80px;
+  }
+}
+.checkbox__section__box__check__button__price--txt {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-color: white;
+  padding-bottom: 10px;
+  padding-right: 20px;
+}
+.checkbox__section__box__check__button__price--txt p {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: min(4vw, 16px);
+  font-weight: 700;
+}
+.checkbox__section__box__check__button--animation {
+  background-color: #99e2d0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 15px 15px 0;
+  padding-left: min(5vw, 30px);
+  padding-right: min(5vw, 30px);
+  width: 100%;
+}
+.checkbox__section__box__check__button--animation .animIcon {
+  color: #99e2d0;
+  padding: 4px;
+  font-size: 10px;
+  border-radius: 50px;
+  background-color: white;
+}
+.checkbox__section__box__check__button:hover .checkbox__section__box__check__button__price {
+  animation: slide-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+@media all and (min-width: 368px) {
+  .checkbox__section__box__check__button:hover .checkbox__section__box__check__button__price {
+    animation: slide-left-10 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
+}
+@media all and (min-width: 473px) {
+  .checkbox__section__box__check__button:hover .checkbox__section__box__check__button__price {
+    animation: slide-left-20 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
+}
+@media all and (min-width: 473px) {
+  .checkbox__section__box__check__button:hover .checkbox__section__box__check__button__price {
+    animation: slide-left-25 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
+}
+.checkbox__section__box__check__button:hover .checkbox__section__box__check__button--animation .animIcon {
+  animation: rotate-center 1s ease-in-out reverse both;
+}
+.checkbox__section__box__order {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  padding-bottom: 50px;
+  padding-top: 10px;
+}
+.checkbox__section__box__order--button {
+  box-shadow: 2px 13px 28px -6px #777777;
+  width: 50%;
+  height: 12vw;
+  max-height: 60px;
+  font-size: min(3.4vw, 19px);
+  color: white;
+  padding-top: min(3.1vw, 18px);
+  padding-bottom: min(3.1vw, 18px);
+  border-radius: 35px;
+  border: none;
+  background: linear-gradient(172deg, #ff79da 12%, #9356dc 71%);
+  cursor: pointer;
+}
+.checkbox__section__box__order--button:hover {
+  background: linear-gradient(172deg, #9f6bde 12%, #ff8cdf 71%);
+  transform: scale(1.1);
+  transition: 1s;
+  box-shadow: -6px -4px 32px 0px #ffaee9, 6px 4px 32px 0px #bb97e8;
+}
+.checkbox__section__box__order--button:active {
+  transform: scale(0.9);
+  transition: 0.1s;
+  box-shadow: -6px -4px 32px 0px #ffaee9, 6px 4px 32px 0px #bb97e8 inset;
+}
+
+/*END LA PALETTE DU GOUT*/
 .footer {
   background-color: #2a2a2a;
   padding-bottom: 40px;
@@ -439,7 +874,7 @@ a {
   padding-left: 10px;
   padding-right: 10px;
 }
-@media all and (min-width: 720px) {
+@media all and (min-width: 457px) {
   .footer__logo {
     justify-content: center;
     align-items: center;
@@ -452,20 +887,26 @@ a {
 }
 .footer__boxLink {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   padding-left: 10px;
   padding-right: 10px;
 }
-@media all and (min-width: 720px) {
+@media all and (min-width: 457px) {
   .footer__boxLink {
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media all and (min-width: 768px) {
+  .footer__boxLink {
+    flex-direction: row;
   }
 }
 .footer__boxLink__position {
   padding-bottom: 5px;
-  margin-right: 110px;
 }
-@media all and (min-width: 720px) {
+@media all and (min-width: 768px) {
   .footer__boxLink__position {
     margin-right: 20px;
   }
