--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -7,3 +7,19 @@ a {
   text-decoration: none;
   display: contents;
 }
+.bgImage {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+  &__img {
+    width: 100%;
+    object-fit: cover;
+    max-height: 500px;
+    z-index: -1;
+  }
+}
+.mainFlex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
