--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,7 +11,7 @@
     padding-bottom: 20px;
     padding-left: 10px;
     padding-right: 10px;
-    @include tabletteAndDesktop-screen {
+    @include mobile-check(457px) {
       justify-content: center;
       align-items: center;
     }
@@ -23,17 +23,23 @@
   }
   &__boxLink {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     padding-left: 10px;
     padding-right: 10px;
 
-    @include tabletteAndDesktop-screen {
+    @include mobile-check(457px) {
       justify-content: center;
+
+      flex-direction: column;
+      align-items: center;
+    }
+    @include mobile-check(768px) {
+      flex-direction: row;
     }
     &__position {
       padding-bottom: 5px;
-      margin-right: 110px;
-      @include tabletteAndDesktop-screen {
+
+      @include mobile-check(768px) {
         margin-right: 20px;
       }
       &--icone {
