--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -289,3 +289,306 @@
   animation: flash 3s cubic-bezier(0.69, 1.1, 0.34, 1.01) infinite both;
 }
 /*End Section 3*/
+
+/*START LA PALETTE DU GOUT*/
+.checkbox__section {
+  @include flexcenter;
+
+  padding-right: 10px;
+  padding-left: 10px;
+  flex-wrap: wrap;
+  &__box {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    @include tabletteAndDesktop-screen {
+      margin-right: 10px;
+      margin-left: 10px;
+    }
+    &__title {
+      display: flex;
+      flex-direction: column;
+      & h2 {
+        font-weight: 400;
+        font-size: min(4.2vw, 18px);
+        &::after {
+          display: block;
+          content: "";
+          margin-top: 4px;
+          width: 8vw;
+          max-width: 35px;
+          background-color: $colorTertiaire;
+          border: solid 1px $colorTertiaire;
+          height: 1px;
+        }
+      }
+    }
+    &__check {
+      &__button4 {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+        overflow: hidden;
+        background-color: white;
+        border-radius: 15px;
+        box-shadow: 4px 5px 8px 4px $colorGreyShadow;
+        cursor: pointer;
+        width: 95vw;
+        max-width: 370px;
+        animation: slide-in-blurred-bottom 2s cubic-bezier(0.23, 1, 0.32, 1)
+          3.6s both;
+        &__title {
+          display: flex;
+          flex-direction: column;
+          padding: 10px;
+          white-space: nowrap;
+          overflow: hidden;
+          width: auto;
+
+          & h3 {
+            font-size: min(4.5vw, 18px);
+            margin-bottom: 2px;
+            margin-top: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+          & p {
+            font-weight: 400;
+            font-size: min(4vw, 16px);
+            margin-top: 0;
+            margin-bottom: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+        }
+        &__price {
+          display: flex;
+          margin-right: -55px;
+          @include mobile-check(368px) {
+            margin-right: -65px;
+          }
+          @include mobile-check(473px) {
+            margin-right: -75px;
+          }
+          @include mobile-check(473px) {
+            margin-right: -80px;
+          }
+          &--txt {
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+            background-color: white;
+            padding-bottom: 10px;
+            padding-right: 20px;
+
+            & p {
+              display: block;
+              margin-top: 0;
+              margin-bottom: 0;
+              font-size: min(4vw, 16px);
+              font-weight: 700;
+            }
+          }
+        }
+        &--animation {
+          background-color: $colorTertiaire;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 0 15px 15px 0;
+          padding-left: min(5vw, 30px);
+          padding-right: min(5vw, 30px);
+          width: 100%;
+
+          & .animIcon {
+            color: $colorTertiaire;
+            padding: 4px;
+            font-size: 10px;
+            border-radius: 50px;
+            background-color: white;
+          }
+        }
+
+        &:hover .checkbox__section__box__check__button4__price {
+          animation: slide-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
+          @include mobile-check(368px) {
+            animation: slide-left-10 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+              both;
+          }
+          @include mobile-check(473px) {
+            animation: slide-left-20 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+              both;
+          }
+          @include mobile-check(473px) {
+            animation: slide-left-25 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+              both;
+          }
+        }
+        &:hover .checkbox__section__box__check__button4--animation .animIcon {
+          animation: rotate-center 1s ease-in-out reverse both;
+        }
+      }
+
+      &__button {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+        overflow: hidden;
+        background-color: white;
+        border-radius: 15px;
+        box-shadow: 4px 5px 8px 4px $colorGreyShadow;
+        cursor: pointer;
+        width: 95vw;
+        max-width: 370px;
+        &:nth-child(1) {
+          animation: slide-in-blurred-bottom 2s cubic-bezier(0.23, 1, 0.32, 1)
+            2s both;
+        }
+        &:nth-child(2) {
+          animation: slide-in-blurred-bottom 2s cubic-bezier(0.23, 1, 0.32, 1)
+            2.5s both;
+        }
+        &:nth-child(3) {
+          animation: slide-in-blurred-bottom 2s cubic-bezier(0.23, 1, 0.32, 1)
+            3s both;
+        }
+
+        &__title {
+          display: flex;
+          flex-direction: column;
+          padding: 10px;
+          white-space: nowrap;
+          overflow: hidden;
+          width: auto;
+
+          & h3 {
+            font-size: min(4.5vw, 18px);
+            margin-bottom: 2px;
+            margin-top: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+          & p {
+            font-weight: 400;
+            font-size: min(4vw, 16px);
+            margin-top: 0;
+            margin-bottom: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+        }
+        &__price {
+          display: flex;
+          margin-right: -55px;
+          @include mobile-check(368px) {
+            margin-right: -65px;
+          }
+          @include mobile-check(473px) {
+            margin-right: -75px;
+          }
+          @include mobile-check(473px) {
+            margin-right: -80px;
+          }
+          &--txt {
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+            background-color: white;
+            padding-bottom: 10px;
+            padding-right: 20px;
+
+            & p {
+              display: block;
+              margin-top: 0;
+              margin-bottom: 0;
+              font-size: min(4vw, 16px);
+              font-weight: 700;
+            }
+          }
+        }
+        &--animation {
+          background-color: $colorTertiaire;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 0 15px 15px 0;
+          padding-left: min(5vw, 30px);
+          padding-right: min(5vw, 30px);
+          width: 100%;
+
+          & .animIcon {
+            color: $colorTertiaire;
+            padding: 4px;
+            font-size: 10px;
+            border-radius: 50px;
+            background-color: white;
+          }
+        }
+
+        &:hover .checkbox__section__box__check__button__price {
+          animation: slide-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
+          @include mobile-check(368px) {
+            animation: slide-left-10 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+              both;
+          }
+          @include mobile-check(473px) {
+            animation: slide-left-20 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+              both;
+          }
+          @include mobile-check(473px) {
+            animation: slide-left-25 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+              both;
+          }
+        }
+        &:hover .checkbox__section__box__check__button--animation .animIcon {
+          animation: rotate-center 1s ease-in-out reverse both;
+        }
+      }
+    }
+    &__order {
+      @include flexcenter;
+      margin-top: 20px;
+      padding-bottom: 50px;
+      padding-top: 10px;
+      &--button {
+        box-shadow: 2px 13px 28px -6px $colorGreyIcone;
+        width: 50%;
+        height: 12vw;
+        max-height: 60px;
+        font-size: min(3.4vw, 19px);
+        color: white;
+        padding-top: min(3.1vw, 18px);
+        padding-bottom: min(3.1vw, 18px);
+        border-radius: 35px;
+        border: none;
+        background: linear-gradient(
+          172deg,
+          $colorSecondaireGradient,
+          $colorPrimaireGradient
+        );
+        cursor: pointer;
+        &:hover {
+          background: linear-gradient(
+            172deg,
+            $colorPrimaireGradientLightReverse,
+            $colorSecondaireGradientLightReverse
+          );
+
+          transform: scale(1.1);
+          transition: 1s;
+          box-shadow: -6px -4px 32px 0px #ffaee9, 6px 4px 32px 0px #bb97e8;
+        }
+        &:active {
+          transform: scale(0.9);
+          transition: 0.1s;
+          box-shadow: -6px -4px 32px 0px #ffaee9, 6px 4px 32px 0px #bb97e8 inset;
+        }
+      }
+    }
+  }
+}
+/*END LA PALETTE DU GOUT*/
