--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -23,6 +23,11 @@
     @content;
   }
 }
+@mixin mobile-check-max($mobilecheck) {
+  @media all and (max-width: $mobilecheck) {
+    @content;
+  }
+}
 
 @mixin flexcenter {
   display: flex;
