--- a/css/main.css
+++ b/css/main.css
@@ -105,13 +105,24 @@ a {
 .bgImage {
   display: flex;
   width: 100%;
+  height: 100vw;
+  max-height: 400px;
   overflow: hidden;
+}
+@media all and (max-width: 425px) {
+  .bgImage {
+    height: 300px;
+  }
 }
 .bgImage__img {
   width: 100%;
   object-fit: cover;
-  max-height: 500px;
   z-index: -1;
+}
+@media all and (max-width: 425px) {
+  .bgImage__img {
+    object-position: 60% -50px;
+  }
 }
 
 .mainFlex {
@@ -215,7 +226,7 @@ a {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin-top: -40px;
+  margin-top: -100px;
   padding-top: 10px;
   background-color: #f6f6f6;
   border-radius: 40px 40px 0px 0px;
