--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -10,14 +10,23 @@ a {
 .bgImage {
   display: flex;
   width: 100%;
+  height: 100vw;
+  max-height: 400px;
   overflow: hidden;
+  @include mobile-check-max(425px) {
+    height: 300px;
+  }
   &__img {
     width: 100%;
     object-fit: cover;
-    max-height: 500px;
     z-index: -1;
+
+    @include mobile-check-max(425px) {
+      object-position: 60% -50px;
+    }
   }
 }
+
 .mainFlex {
   display: flex;
   flex-direction: column;
